--- a/BookStoreApp.Blazor.Server.UI/Shared/NavMenu.razor
+++ b/BookStoreApp.Blazor.Server.UI/Shared/NavMenu.razor
@@ -9,6 +9,12 @@
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Home
+            </NavLink>
+        </div>
         
         <AuthorizeView> 
             <Authorized>
@@ -17,13 +23,19 @@
             <NavLink class="nav-link">
                 <span class="oi oi-person" aria-hidden="true"></span> @context.User?.Identity?.Name
             </NavLink>
-        </div>
+                 </div>
 
-           <div class="nav-item px-3">
+                 <div class="nav-item px-3">
             <NavLink class="nav-link" href="users/logout">
                 <span class="oi oi-arrow-circle-left" aria-hidden="true"></span> Log Out
             </NavLink>
-        </div>
+                </div>
+                <hr/>
+                 <div class="nav-item px-3">
+                <NavLink class="nav-link" href="authors/">
+                <span class="oi oi-book" aria-hidden="true"></span> Authors
+                </NavLink>
+                </div>
             </Authorized>
 
             <NotAuthorized>
@@ -31,22 +43,18 @@
             <NavLink class="nav-link" href="users/register">
                 <span class="oi oi-plus" aria-hidden="true"></span> Register
             </NavLink>
-        </div>
+             </div>
 
             <div class="nav-item px-3">
             <NavLink class="nav-link" href="users/login">
                 <span class="oi oi-person" aria-hidden="true"></span> Login
             </NavLink>
-        </div>
+                </div>
             </NotAuthorized>
         </AuthorizeView>
           
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
+        
      
     </nav>
 </div>
