--- a/BookStoreApp.Blazor.Server.UI/Pages/Authors/Details.razor
+++ b/BookStoreApp.Blazor.Server.UI/Pages/Authors/Details.razor
@@ -39,18 +39,21 @@
     }
     else
     {
-        foreach(var book in Author.Books)
+        <div class="row">
+        @foreach(var book in Author.Books)
         {
-   
+        <div class="col-3">
        <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="@book.Image" alt="@book.Title">
+        <img class="card-img-top" src="@book.Image" alt="@book.Title" style="width:286px; height:100%;">
         <div class="card-body">
         <h5 class="card-title">@book.Title - @book.Price.ToString("C")</h5>
         <p class="card-text"></p>
         <a href="#" class="btn btn-primary">View Book</a>
         </div>
          </div>
+         </div>
          }
+         </div>
     }
 
     <button @onclick="GoToEdit" class="btn btn-warning">
