--- a/BookStoreApp.Blazor.Server.UI/Pages/Authors/Update.razor
+++ b/BookStoreApp.Blazor.Server.UI/Pages/Authors/Update.razor
@@ -32,7 +32,7 @@
         <span class="oi oi-pencil"></span>
         Update Author
     </button>
-    <button @onclick="BackToList" class="btn btn-outline-secondary">
+    <button @onclick="BackToList" class="btn btn-outline-secondary" type="button">
         <span class="oi oi-media-step-backward"></span>
         Back to list
     </button>
@@ -46,7 +46,7 @@
 
     protected async override Task OnInitializedAsync()
     {
-        var response = await authorService.GetAuthorForUpdate(id);
+        var response = await authorService.GetForUpdate(id);
         if (response.Success)
         {
             Author = response.Data;
