--- a/BookStoreApp.Blazor.Server.UI/Pages/Books/Update.razor
+++ b/BookStoreApp.Blazor.Server.UI/Pages/Books/Update.razor
@@ -116,7 +116,7 @@
                 return;
             }
             var ext = System.IO.Path.GetExtension(file.Name);
-            if (ext.ToLower().Contains("jpg") || ext.ToLower().Contains("png") || ext.ToLower().Contains("jpeg"))
+            if((ext.ToLower().Contains("jpg") || ext.ToLower().Contains("png") || ext.ToLower().Contains("jpeg")) == false)
             {
                 UploadFileWarning = "Please select a valid image type (.jpg or .png)";
                 return;
