Upraven Entity architektura + Infinte scroll (virtualization)

--- a/BookStoreApp.Blazor.Server.UI/Pages/Authors/Index.razor
+++ b/BookStoreApp.Blazor.Server.UI/Pages/Authors/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/authors"
+@using BookStoreApp.Blazor.Server.UI.Models
 @inject IClient httpClient
 @inject IAuthorService authorService
 @inject IJSRuntime js
@@ -25,62 +26,31 @@ else
             <a class="btn btn-dark" href="/authors/create"><span class="oi oi-plus" aria-hidden="true"></span> Create</a> 
         </AuthorizeView>
         <br/>
-        <table class="table table-responsive">
-            <thead>
-                <tr>
-                    <th>First Name </th>
-                    <th>Last name </th>
-                    <th>Actions </th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var author in Authors)
-                {
-                    <tr>
-                        <td>@author.FirstName</td>
-                        <td>@author.LastName</td>
-                        <td>
-                            <a class="btn btn-primary" href="/authors/details/@author.Id"><span class="oi oi-book" aria-hidden="true"></span> Details</a>
-                           <AuthorizeView Roles="Administrator"> 
-                            <a class="btn btn-warning" href="/authors/update/@author.Id"><span class="oi oi-pencil" aria-hidden="true"></span> Edit</a>
-                            <button  class="btn btn-danger" @onclick=@(() => Delete(@author.Id))><span class="oi oi-delete" aria-hidden="true"></span> Delete</button>
-                            </AuthorizeView>
-                        </td>
-                    </tr>
-                }
-
-            </tbody>
-        </table>
+        <AuthorTable Authors="Authors" TotalSize="TotalSize" OnScroll="LoadAuthors" />
     }
 }
 
 
 @code {
-    private List<AuthorReadOnlyDto> Authors;
-    private Response<List<AuthorReadOnlyDto>> response = new Response<List<AuthorReadOnlyDto>> { Success = true};
+    public List<AuthorReadOnlyDto> Authors;
+    public int TotalSize { get; set; }
+    private Response<AuthorReadOnlyDtoVirtualizeResponse> response = new Response<AuthorReadOnlyDtoVirtualizeResponse> { Success = true};
 
     protected override async Task OnInitializedAsync()
     {
-        response = await authorService.Get();
+        response = await authorService.Get(new QueryParameters {StartIndex = 0});
         if (response.Success)
         {
-            Authors = response.Data;
+            Authors = response.Data.Items.ToList();
         }
-
-
     }
-    private async Task Delete(int authorId)
+
+    private async Task LoadAuthors(QueryParameters queryParms)
     {
-        var author = Authors.First(q => q.Id == authorId);
-        var confirm = await js.InvokeAsync<bool>("confirm", $"Are you sure you want to delete {@author.FirstName} {@author.LastName}?");
-        if (confirm)
-        {
-            var response = await authorService.Delete(authorId);
-            if (response.Success)
-            {
-                 await OnInitializedAsync();
-            }
-        }
-        
-    } 
+        var virtualizeResult = await authorService.Get(queryParms);
+        Authors = virtualizeResult.Data.Items.ToList();
+        TotalSize = virtualizeResult.Data.TotalSize;
+    }
+
 }
+
